[package]
name = "short_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
lazy_static = "1.4.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sled = "0.34.7"
uuid = { version = "1.3.4", features = ["v4"] }
